--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(bernard_actuator_if)
+project(bernard_hw_if)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -19,7 +19,10 @@ set(CANDLE_BUILD_STATIC ON)
 set(CANDLE_OMIT_EXAMPLES ON)
 add_subdirectory(candle)
 
-add_executable(actuator_state_publisher src/actuator_state_publisher.cpp)
+add_executable(actuator_state_publisher
+ src/actuator_state_publisher.cpp
+ src/actuators.cpp
+)
 ament_target_dependencies(actuator_state_publisher rclcpp std_msgs sensor_msgs)
 target_link_libraries(actuator_state_publisher candle)
 target_include_directories(actuator_state_publisher PUBLIC ./candle/include ${CMAKE_SOURCE_DIR}/include)
