--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,13 @@ target_link_libraries(actuator_state_publisher candle)
 target_include_directories(actuator_state_publisher PUBLIC ./candle/include ${CMAKE_SOURCE_DIR}/include)
 
 # Actuator full interface
-add_executable(actuator_if
- src/actuator_if.cpp
- src/actuators.cpp
-)
-ament_target_dependencies(actuator_if rclcpp std_msgs sensor_msgs)
-target_link_libraries(actuator_if candle)
-target_include_directories(actuator_if PUBLIC ./candle/include ${CMAKE_SOURCE_DIR}/include)
+# add_executable(actuator_if
+#  src/actuator_if.cpp
+#  src/actuators.cpp
+# )
+# ament_target_dependencies(actuator_if rclcpp std_msgs sensor_msgs)
+# target_link_libraries(actuator_if candle)
+# target_include_directories(actuator_if PUBLIC ./candle/include ${CMAKE_SOURCE_DIR}/include)
 
 install(TARGETS
   actuator_state_publisher
